--- a/.github/workflows/E2E-PUSH-PULL.yml
+++ b/.github/workflows/E2E-PUSH-PULL.yml
@@ -3,13 +3,13 @@ name: E2E Tests
 
 on:
  
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+  #push:
+   # branches: [ "main" ]
+  #pull_request:
+   # branches: [ "main" ]
 
   
-#  workflow_dispatch:
+  workflow_dispatch:
 
 jobs:
   build:
