--- a/.github/workflows/E2E.yml
+++ b/.github/workflows/E2E.yml
@@ -2,14 +2,13 @@ name: E2E
 
 
 on:
- 
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+   schedule:
+    - cron: "0 0 * * *"
+     
+
 
   
-  workflow_dispatch:
+   workflow_dispatch:
 
 jobs:
   build:
