Update and rename Smoke-Tests.yml to smoke-tests.yml

--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -36,5 +36,5 @@ jobs:
           rfbrowser init
 
 
-      - name: Run Robot Framework e2e-tests
+      - name: Run Smoke Tests
         run: robot --exclude smoke --listener RetryFailed e2e-tests\  
