--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -37,4 +37,25 @@ jobs:
 
 
       - name: Run Smoke Tests
-        run: robot --exclude smoke --listener RetryFailed e2e-tests\  
+        run: robot --exclude smoke --listener RetryFailed e2e-tests\   
+
+
+  run-test:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup K6
+        uses: grafana/setup-k6-action@v1
+      - name: Run local k6 test
+        uses: grafana/run-k6-action@v1
+        with:
+          path: test.js
+       
+      
+      
+
+      
+
+      
