--- a/.github/workflows/smoke-tests.yml
+++ b/.github/workflows/smoke-tests.yml
@@ -46,12 +46,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Setup Web Application
+        run: docker compose -f compose.dev.yml up -d
+
       - name: Setup K6
         uses: grafana/setup-k6-action@v1
+        
       - name: Run local k6 test
         uses: grafana/run-k6-action@v1
         with:
-          path: test.js
+          path: load_tests\
        
       
       
