Changed listener from robot e2e tests to Wait Until Keyword Succeeds. Deleted files that are not needed

--- a/.github/workflows/E2E.yml
+++ b/.github/workflows/E2E.yml
@@ -36,4 +36,4 @@ jobs:
 
 
       - name: Run Robot Framework e2e-tests
-        run: robot --listener RetryFailed e2e-tests\  
+        run: robot e2e-tests\  
